refatorando, excluindo e movendo arquivos